--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.0.1",
-    "svelte": "^3.37.0"
+    "svelte": "^3.37.0",
+    "typescript": "^4.2.4"
   }
 }
