--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["samclercky"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+testing = []
 
 [dependencies]
 warp = "0.3.1"
